--- a/sehrim.html
+++ b/sehrim.html
@@ -105,3 +105,207 @@
 </head>
 
 </html>
+=======
+<!DOCTYPE html>
+<html lang="tr">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Şehrim - Sakarya</title>
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+  <style>
+    body {
+      padding: 20px;
+      font-family: Arial, sans-serif;
+
+      /* Arka plan resmi */
+      background-image: url('img/sakarya.png'); /* Kendi arka plan resmini koy */
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+
+      color: #333;
+    }
+
+    nav .container {
+      max-width: 100% !important; /* Navbar tam genişlik için */
+      padding-left: 0;
+      padding-right: 0;
+    }
+
+    /* İçerik bölümleri arası boşluk */
+    section {
+      margin-top: 40px;
+    }
+
+    /* Slider resimlerine hover efekti */
+    .carousel-item a img {
+      cursor: pointer;
+      transition: transform 0.3s ease;
+      border-radius: 8px;
+    }
+
+    .carousel-item a img:hover {
+      transform: scale(1.05);
+    }
+
+    /* Başlık ortalama */
+    h1.text-center {
+      margin-bottom: 30px;
+      color: white; /* Arka plan koyuysa başlık beyaz */
+      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
+    }
+
+    /* İçerik kutusunun arka planı */
+    .content-container {
+      max-width: 700px;
+      margin: 0 auto;
+      background: rgba(255, 255, 255, 0.85);
+      padding: 20px;
+      border-radius: 8px;
+    }
+    /* Yeni arka plan rengi sınıfı */
+.background-changed {
+  background-color: #a9c7b4; /* Değiştirilecek arka plan rengi */
+}
+
+  </style>
+</head>
+
+<body>
+
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <span class="navbar-brand">Benim Sitem</span>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
+        aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" href="webOdev.html">Hakkımda</a></li>
+          <li class="nav-item"><a class="nav-link" href="cv.html">Özgeçmiş</a></li>
+          <li class="nav-item"><a class="nav-link active" aria-current="page" href="sehrim.html">Şehrim</a></li>
+          <li class="nav-item"><a class="nav-link" href="miraslarimiz.html">Mirasımız</a></li>
+          <li class="nav-item"><a class="nav-link" href="ilgialanlarim.html">İlgi Alanlarım</a></li>
+          <li class="nav-item"><a class="nav-link" href="iletisim.html">İletişim</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Sayfa Başlığı -->
+  <div class="container mt-4">
+    <h1 class="text-center">Benim Şehrim: Sakarya</h1>
+  </div>
+
+  <!-- Slider -->
+<div id="slider" class="carousel slide container content-container" data-bs-ride="carousel" style="max-width:700px;">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <a href="#sapanca"><img src="img/sapanca.png" class="d-block w-100"  width="470" height="430" ></a>
+    </div>
+    <div class="carousel-item">
+      <a href="#tarakli"><img src="img/tarakli.png" class="d-block w-100"  width="470" height="430" ></a>
+    </div>
+    <div class="carousel-item">
+      <a href="#depremmuzesi"><img src="img/depremmuzesi.png" class="d-block w-100"  width="470" height="430" ></a>
+    </div>
+    <div class="carousel-item">
+      <a href="#poyrazlar"><img src="img/poyrazlar.png" class="d-block w-100" width="470" height="430"></a>
+    </div>
+    <div class="carousel-item">
+      <a href="#kopru"><img src="img/kopru.png" class="d-block w-100" alt="kopru" width="470" height="430"></a>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#slider" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+    <span class="visually-hidden">Önceki</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#slider" data-bs-slide="next">
+    <span class="carousel-control-next-icon"></span>
+    <span class="visually-hidden">Sonraki</span>
+  </button>
+</div>
+
+
+  <!-- İçerik Bölümleri -->
+  <div class="container content-container" style="max-width:700px;">
+    <section id="sapanca">
+      <h2>Sapanca Gölü</h2>
+      <p>Sapanca, Türkiye’nin Marmara Bölgesi’nde yer alan Sakarya iline bağlı doğal güzellikleriyle ünlü bir ilçedir.
+         Gölü, yaylaları, ormanları ve doğal yaşamı ile hem yerli hem yabancı turistlerin ilgisini çeken bir destinasyondur.
+         . Tatlı su gölü olan Sapanca Gölü, çevresindeki dağlardan beslenir ve muhteşem manzarasıyla yılın her mevsiminde ziyaretçilerine huzur sunar.
+          Göl çevresi yürüyüş, bisiklet, piknik ve fotoğrafçılık gibi aktiviteler için uygundur.
+        Sapanca’nın tarihi çok eskilere dayanır. Roma ve Bizans dönemlerine ait kalıntılara rastlanmıştır.
+         İlçede Osmanlı döneminden kalma camiler, çeşmeler ve köprüler de ziyaret edilebilir.</p>
+    </section>
+
+    <section id="taraklı">
+      <h2>Taraklı</h2>
+      <p>Taraklı, Sakarya iline bağlı, Osmanlı’dan izler taşıyan mimarisi, tarihi evleri ve doğal güzellikleri ile bilinen sakin ve huzurlu bir ilçedir. 
+        “Sakin Şehir” unvanına sahip Taraklı, doğayla iç içe bir yaşam arayanlar için adeta bir saklı cennettir
+        Taraklı, yöresel yemekleriyle de öne çıkar. Keşkek, Taraklı baklavası, ve doğal ürünlerle yapılan kahvaltılar, ziyaretçilerin damak zevkine hitap eder.
+        Aynı zamanda organik ürünler ve el yapımı hediyelik eşyalar da oldukça yaygındır..</p>
+    </section>
+
+    <section id="depremmuzesi">
+      <h2>Deprem Müzesi</h2>
+      <p>TSakarya Deprem ve Kültür Müzesi, 17 Ağustos 1999 Marmara Depremi’nin acı hatıralarını yaşatmak ve deprem bilincini artırmak amacıyla kurulmuş, 
+        Türkiye’nin ilk deprem temalı müzelerinden biridir. 
+        Sakarya’nın Adapazarı ilçesinde yer alan müze, hem eğitim hem de farkındalık oluşturma yönünden büyük önem taşır.
+      Modern bir mimariye sahip olan müze binası, aynı zamanda deprem güvenli yapılar konusunda da örnek teşkil eder.
+       İç mekan düzenlemesi ve görsel anlatımlar, ziyaretçilerin kolayca bilgiye ulaşmasını ve öğrenmesini destekler niteliktedir.</p>
+    </section>
+
+    <section id="poyrazlar">
+      <h2>Poyrazlar</h2>
+      <p>Poyrazlar Gölü, Sakarya'nın merkezine sadece 10 kilometre uzaklıkta yer alan, doğayla baş başa kalmak isteyenler için eşsiz bir kaçış noktasıdır.
+         Göl çevresi, doğal zenginliği, huzurlu atmosferi ve aktiviteleriyle hem günübirlik ziyaretçiler hem de doğaseverler için ideal bir destinasyondur.
+        Ziyaretçiler göl çevresindecbisiklet sürebilir, doğa yürüyüşleri yapabilir,
+Kamp kurabilir, piknik alanlarında vakit geçirebilir. Ayrıca göl kenarında su bisikletleriyle küçük gezintiler de yapılabilmektedir.</p>
+    </section>
+
+     <section id="kopru">
+      <h2>Justinianus Köprüsü</h2>
+      <p>Köprü Bizans İmparatoru I. Justinianus döneminde, MS 6. yüzyılın ortalarında (yaklaşık 560'larda) inşa edilmiştir.
+        Amacı, Konstantinopolis (İstanbul) ile Anadolu'nun iç kesimleri arasındaki yolu daha güvenli ve sağlam hale getirmekti.
+        İpek Yolu’nun Anadolu kolunun önemli bir parçasıydı.</p>
+    </section>
+  </div>
+
+  <!-- Bootstrap JS Bundle -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <script>
+  document.querySelectorAll('#slider a').forEach(link => {
+  link.addEventListener('click', e => {
+    e.preventDefault();
+
+    // Önce tüm içerik kutularından sınıfı kaldır
+    document.querySelectorAll('.content-container section').forEach(section => {
+      section.classList.remove('background-changed');
+    });
+
+    // Tıklanan resme karşılık gelen <section> içinde arka plan rengi uygula
+    const targetId = link.getAttribute('href').substring(1);
+    const targetElem = document.getElementById(targetId);
+    if (targetElem) {
+      targetElem.classList.add('background-changed');
+      targetElem.scrollIntoView({ behavior: 'smooth' });
+    }
+  });
+});
+
+
+  </script>
+
+</body>
+
+</html>
