--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <style>
     body {
-        background-image: url('img/hosgeldiniz.png');
+        background-image: url('img/hg.png');
         background-size: cover;
         background-position: center;
         background-attachment: fixed; 
