--- a/sehrim.html
+++ b/sehrim.html
@@ -4,29 +4,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Şehrim - Sakarya</title>
+  <title>Sakarya</title>
 
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" >
 
   <style>
     body {
-      padding: 20px;
+      padding: 20px; /*Padding, CSS’te bir kutunun içeriğiyle kenarlığı(border) arasındaki boşluğu ayarlamak için kullanılır*/
       font-family: Arial, sans-serif;
 
-      /* Arka plan resmi */
-      background-image: url('img/sakarya.png'); /* Kendi arka plan resmini koy */
-      background-size: cover;
+      /* arka plan */
+      background-image: url('img/sakarya.png'); 
+      background-size: cover; /* Ekranı kaplamsı için*/
       background-position: center;
-      background-attachment: fixed;
-
-      color: #333;
-    }
-
-    nav .container {
-      max-width: 100% !important; /* Navbar tam genişlik için */
-      padding-left: 0;
-      padding-right: 0;
+      background-attachment: fixed; /* Arka plan resminin sabit kalması için*/
     }
 
     /* İçerik bölümleri arası boşluk */
