--- a/ilgialanlarim.html
+++ b/ilgialanlarim.html
@@ -11,7 +11,7 @@
       margin: 0;
     }
     body {
-      background-image: url('img/arkaplan.jpg');
+      background-image: url('img/ap.png');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;     /* kullanıcı sayfayı aşağı/yukarı kaydırdığında, arka plan  sabit kalır (css youm satırı)*/
