--- a/sonuc.html
+++ b/sonuc.html
@@ -9,6 +9,7 @@
       background-color: #f1f8e9;
       font-family: Arial, sans-serif;
       padding: 2rem;
+      background-image: url('img/ap.png');
     }
     .kutu {
       background: white;
