--- a/webOdev.html
+++ b/webOdev.html
@@ -11,7 +11,7 @@
       margin: 0;
     }
     body {
-      background-image: url('img/arkaplan.jpg');
+      background-image: url('img/ap.png');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;     /* kullanıcı sayfayı aşağı/yukarı kaydırdığında, arka plan  sabit kalır (css youm satırı)*/
@@ -36,6 +36,7 @@
           <li class="nav-item"><a class="nav-link" href="miraslarimiz.html">Mirasımız</a></li>
           <li class="nav-item"><a class="nav-link" href="ilgialanlarim.html">İlgi Alanlarım</a></li>
           <li class="nav-item"><a class="nav-link" href="iletisim.html">İletişim</a></li>
+          
         </ul>
       </div>
     </div>
@@ -55,12 +56,12 @@
     <p> Müzikten bahsetmişken sevdiğim bazı şarkıları sizin için aşağıya bıraktım</p>
     <div class="row">
       <div class="col-md-4">
-        <img src="img/muzik.jpg" class="img-fluid rounded" alt="Müzik" width="200" height="130"> <!-- img-fluid: Bootstrap sınıfı → Responsive hale getirir(Ekrana göre boyutlanır), rounded köşeler için-->
+        <img src="img/muzi.png" class="img-fluid rounded" alt="Müzik" width="150" height="80"> <!-- img-fluid: Bootstrap sınıfı → Responsive hale getirir(Ekrana göre boyutlanır), rounded köşeler için-->
       </div>
-      <div class="col-md-4">
-        <img src="img/fotograf.jpg" class="img-fluid rounded" alt="Fotoğraf" width="200" height="130" >
+      <div class="col-md-4" style="text-align: center;">
+        <img src="img/fotograf.jpg" class="img-fluid rounded" alt="Fotoğraf" width="400" height="250" >
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4" style="text-align: right;" >
         <a href="https://www.youtube.com/watch?v=9KkAtcPku2k&list=PLk0Blg8haVklZL2R57q6A5EK5x6EITiiC" target="_blank">Müzik Listesi</a>
       </div>
     </div>
