--- a/cv.html
+++ b/cv.html
@@ -11,7 +11,7 @@
       margin: 0;
     }
     body {
-      background-image: url('img/arkaplan.jpg');
+      background-image: url('img/ap.png');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;     /* kullanıcı sayfayı aşağı/yukarı kaydırdığında, arka plan  sabit kalır (css youm satırı)*/
@@ -25,7 +25,7 @@
 
     header {
     text-align: center;
-    background-color: #003366;
+    background-color: #661300;
     color: white;
     padding: 20px 0;
     margin-bottom: 30px; }
