--- a/iletisim.html
+++ b/iletisim.html
@@ -8,7 +8,7 @@
 
   <style>
     body {
-      background-image: url('img/arkaplan.jpg');
+      background-image: url('img/ap.png');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
