--- a/ilgialanlarim.html
+++ b/ilgialanlarim.html
@@ -33,6 +33,63 @@
         </ul>
       </div>
     </div>
-  </nav>    
+  </nav>  
+  
+
+  <!-- Navbar ve diğer içerik -->
+  <div class="container mt-4">
+    <h2 class="text-center mb-4">Sevdiğim Bazı Dizi ve Filmler</h2>
+    <div class="row" id="movie-list"></div>
+  </div>
+
+  <!-- TMDB API kodu buraya -->
+  <script>
+  const apiKey = '30a525ad63314fa2a90d00d0eb3cc80c';
+  const titles = [
+    'Coraline',
+    'Alice in Borderland',
+    'Pirates of the Caribbean',
+    'The Haunting of Hill House',
+    'The Maze Runner',
+    'Wizards of Waverly Place'
+  ];
+
+  const movieList = document.getElementById('movie-list');
+
+  titles.forEach(title => {
+    const url = `https://api.themoviedb.org/3/search/multi?api_key=${apiKey}&query=${encodeURIComponent(title)}&language=tr-TR`;
+
+    fetch(url)
+      .then(response => response.json())
+      .then(data => {
+        const result = data.results[0];
+        if (!result || !result.poster_path) return;
+
+        const card = document.createElement('div');
+        card.className = 'col-md-4 mb-4';
+        card.innerHTML = `
+          <div class="card h-100">
+            <img src="https://image.tmdb.org/t/p/w780${result.poster_path}" class="card-img-top" alt="${result.title || result.name}">
+            <div class="card-body">
+              <h5 class="card-title">${result.title || result.name}</h5>
+              <p class="card-text">${result.overview ? result.overview.slice(0, 100) + '...' : 'Açıklama bulunamadı.'}</p>
+            </div>
+          </div>
+        `;
+        movieList.appendChild(card);
+        })
+        .catch(error => {
+          console.error(`${title} için veri alınamadı:`, error);
+        });
+    });
+</script>
+<div class="container mt-4">
+  <p class="text-center text-muted">
+    Bu sayfada <a href="https://www.themoviedb.org/"> API Servisi</a> kullanılmıştır.
+  </p>
+  <div class="row" id="movie-list"></div>
+</div>
+
+
 </body>
 </html>
