--- a/iletisim.html
+++ b/iletisim.html
@@ -69,22 +69,17 @@
 
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
+   <nav class="navbar navbar-expand-lg navbar-light bg-light"> <!-- navigasyon barı (üst menü çubuğu) tanımlar (html yorum satırı) --> 
+    <div class="container">
       <span class="navbar-brand">Benim Sitem</span>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
-        aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="webOdev.html">Hakkımda</a></li>
           <li class="nav-item"><a class="nav-link" href="cv.html">Özgeçmiş</a></li>
           <li class="nav-item"><a class="nav-link" href="sehrim.html">Şehrim</a></li>
           <li class="nav-item"><a class="nav-link" href="miraslarimiz.html">Mirasımız</a></li>
           <li class="nav-item"><a class="nav-link" href="ilgialanlarim.html">İlgi Alanlarım</a></li>
-          <li class="nav-item"><a class="nav-link active" aria-current="page" href="iletisim.html">İletişim</a></li>
+          <li class="nav-item"><a class="nav-link" href="iletisim.html">İletişim</a></li>
         </ul>
       </div>
     </div>
