--- a/sehrim.html
+++ b/sehrim.html
@@ -72,6 +72,7 @@
           <li class="nav-item"><a class="nav-link" href="miraslarimiz.html">Mirasımız</a></li>
           <li class="nav-item"><a class="nav-link" href="ilgialanlarim.html">İlgi Alanlarım</a></li>
           <li class="nav-item"><a class="nav-link" href="iletisim.html">İletişim</a></li>
+          <li class="nav-item"><a class="nav-link" href="login.html">Giriş Yap</a></li>
         </ul>
       </div>
     </div>
