--- a/miraslarimiz.html
+++ b/miraslarimiz.html
@@ -38,6 +38,7 @@
           <li class="nav-item"><a class="nav-link active" href="miraslarimiz.html">Mirasımız</a></li>
           <li class="nav-item"><a class="nav-link" href="ilgialanlarim.html">İlgi Alanlarım</a></li>
           <li class="nav-item"><a class="nav-link" href="iletisim.html">İletişim</a></li>
+          <li class="nav-item"><a class="nav-link" href="login.html">Giriş Yap</a></li>
         </ul>
       </div>
     </div>
