--- a/main.html
+++ b/main.html
@@ -37,7 +37,13 @@
   </nav>
 
   <h1 style="color: aliceblue;">İrem'in Web Sitesine</h1>
-  <p style="color: aliceblue;">Üst menüden sayfalara geçiş yapabilirsiniz.</p>
+  <h5 style="color: aliceblue;">Üst menüden sayfalara geçiş yapabilirsiniz.</h5>
+  <h1>    _     </h1>
+  <h1>    _     </h1>
+  <div style="text-align: center;" >
+    <h1 style="color: aliceblue;">HOŞGELDİNİZ</h1>
+  </div>
+
 
 </body>
 </html>
