--- a/sonuc.html
+++ b/sonuc.html
@@ -10,7 +10,7 @@
     body {
       background-color: #f1f8e9;
       font-family: Arial, sans-serif;
-      padding: 2rem;
+      padding: 2rem; /* iç bosluk */
       background-image: url('img/ap.png');
       background-size: cover; /* Ekranı kaplamsı için*/
       background-position: center;
