--- a/ilgialanlarim.html
+++ b/ilgialanlarim.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <style>
     html, body {
-      height: 100%;
+      height: 100%; 
       margin: 0;
     }
     body {
@@ -36,14 +36,13 @@
     </div>
   </nav>  
   
-
   <!-- Navbar ve diğer içerik -->
   <div class="container mt-4">
     <h2 class="text-center mb-4">Sevdiğim Bazı Dizi ve Filmler</h2>
     <div class="row" id="movie-list"></div>
   </div>
 
-  <!-- TMDB API kodu buraya -->
+  <!-- TMDB(The Movie Database) API kodu buraya -->
   <script>
   const apiKey = '30a525ad63314fa2a90d00d0eb3cc80c';
   const titles = [
@@ -60,14 +59,14 @@
   titles.forEach(title => {
     const url = `https://api.themoviedb.org/3/search/multi?api_key=${apiKey}&query=${encodeURIComponent(title)}&language=tr-TR`;
 
-    fetch(url)
-      .then(response => response.json())
+    fetch(url) /* url üzerinden veri çekmeye çalışır (örneğin bir TMDb API adresi).  Bu bir GET isteğidir.*/
+      .then(response => response.json()) /*JSON formatına çevirir. Çünkü TMDb API verileri JSON olarak gelir*/
       .then(data => {
-        const result = data.results[0];
-        if (!result || !result.poster_path) return;
+        const result = data.results[0]; /*data.results[0] ifadesi, TMDb'nin döndürdüğü filmlerden ilkini (0. sıradakini) alır.*/
+        if (!result || !result.poster_path) return; /* sonuç bulunamadıysa veya filmin poster resmi yoksa, bu durumda devam etmez (ekranda hiçbir şey göstermez)*/
 
-        const card = document.createElement('div');
-        card.className = 'col-md-4 mb-4';
+        const card = document.createElement('div'); /* Kart oluşturulur */
+        card.className = 'col-md-4 mb-4'; /* col-md-4 → Bootstrap ile 3’lü kart düzeni için kullanılır. mb-4 → Alt boşluk (margin-bottom: 4 birim).*/
         card.innerHTML = `
           <div class="card h-100">
             <img src="https://image.tmdb.org/t/p/w780${result.poster_path}" class="card-img-top" alt="${result.title || result.name}">
@@ -77,18 +76,19 @@
             </div>
           </div>
         `;
-        movieList.appendChild(card);
+        movieList.appendChild(card); // Listeye ekleme yapılır
         })
-        .catch(error => {
+        .catch(error => { // İnternet kesilmesi gibi  durumlarda hata yakalama bloğudur
           console.error(`${title} için veri alınamadı:`, error);
         });
     });
 </script>
-<div class="container mt-4">
-  <p class="text-center text-muted">
+<div class="container mt-4"> <!--Ustten bosluk bırakmak içindir-->
+  <p class="text-center text-muted"> <!--text-muted → Yazı rengini gri yapar -->
     Bu sayfada <a href="https://www.themoviedb.org/"> API Servisi</a> kullanılmıştır.
   </p>
-  <div class="row" id="movie-list"></div>
+  <div class="row" id="movie-list"></div> <<!--Film kartlarının ekleneceği yer. class="row" → Bootstrap'ın kolon düzeni içinde kartların satır halinde sıralanmasını sağlar.
+id="movie-list" → JavaScript’in document.getElementById("movie-list") ile bulup içine film kartlarını ekleyeceği yerdir -->
 </div>
 
 
