--- a/miraslarimiz.html
+++ b/miraslarimiz.html
@@ -7,15 +7,14 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <style>
     html, body {
-      height: 100%;
-      margin: 0;
+      height: 100%; /* Tam sayfa görünümü için */
+      margin: 0; 
     }
     body {
       background-image: url('img/ap.png');
       background-size: cover;
       background-position: center;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
+      background-attachment: fixed; /*Arka plan sabit kalır, sayfa scroll edilse bile yerinde durur */
     }
     .kutu {
       background-color: rgba(255, 255, 255, 0.85);
@@ -70,29 +69,9 @@
   </div>
 </div>
 
+  <footer class="text-center p-3 mt-5"> <!-- padding(iç boşluk) 3(boostrapin 0-5 arası ölçel değeri) margin(dış boşluk) 5(max margin değeri)-->
+  <small>&copy; 2025 İrem'in Kişisel Sitesi</small>
+  </footer>
 
-
-  <div class="container kutu">
-    <h2 class="text-center mb-4">Galata Kulesi</h2>
-    <p>
-      İlk yapılış tarihi: 528 yılı Yapan: Bizans İmparatoru Justinianos İlk adı: "Fener Kulesi" (muhtemelen deniz feneri olarak kullanılıyordu)  
-      Şu anki haliyle yeniden inşa: 1348 yılında Cenevizliler tarafından "Christea Turris" (İsa Kulesi) adıyla yeniden yapıldı. 
-      O dönemde Galata bölgesi bir Ceneviz kolonisiydi, ve kule savunma amaçlıydı.  Osmanlı Dönemi: Fetihten sonra yangın gözetleme kulesi olarak kullanıldı. 
-      En meşhur olay: Hezarfen Ahmed Çelebi, 1600’lerde bu kuleden kendini uçurarak Üsküdar’a kadar süzüldü! Günümüzde: Hem tarihi hem turistik önemi var.
-      Ziyarete açık, en üst katında İstanbul manzarasını 360° görebilirsin.
-    <p>
-      Galata Kulesi hakkında anlatılan bir efsane vardır. Derler ki Galata Kulesi, İstanbul Boğazı’nın öteki ucundaki Kız Kulesi’ne aşıktır.
-      Ancak aralarında deniz olduğu için bu iki kule birbirine kavuşamaz.Yıllar boyunca Galata, Kız Kulesi’ni sadece uzaktan izler, ona kavuşmayı hayal eder.
-      Ama deniz aralarındaki engeldir, aşklarını bir türlü dile getiremezler.
-      Fakat bir gün, Hezarfen Ahmed Çelebi, Galata Kulesi’nden kanatlarını takıp uçarken, Galata Kulesi'nin mektubunu alır ve Kız Kulesi’ne ulaştırır.
-      İşte bu olay, iki kule arasındaki sessiz aşkın, sonunda haberleşebilmesi olarak anlatılır. 
-    </p>
-    <img src="img/galata.png" class="img-fluid rounded" alt=" kopru" width="300" height="250" > <!-- img-fluid: Bootstrap sınıfı → Responsive hale getirir(Ekrana göre boyutlanır), rounded köşeler için-->
-  </div>
-
-    
-  
-    
- 
 </body>
 </html>
