--- a/sehrim.html
+++ b/sehrim.html
@@ -9,10 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" >
 
   <style>
-    body {
-      font-family: Arial, sans-serif;
-
-      /* arka plan */
+    body { /* arka plan */
       background-image: url('img/ap.png'); 
       background-size: cover; /* Ekranı kaplamsı için*/
       background-position: center;
@@ -24,14 +21,14 @@
       margin-top: 40px;
     }
 
-    /* Slider resimlerine hover efekti */
+    /* Slider resimlerine hover efekti. Hover efekti, bir öğenin (buton, resim, metin) üzerine fareyle gelindiğinde (mouse hover) oluşan görselin değişmesidir */
     .carousel-item a img {
       cursor: pointer;
       transition: transform 0.3s ease;
       border-radius: 8px;
     }
 
-    .carousel-item a img:hover {
+    .carousel-item a img:hover { 
       transform: scale(1.05);
     }
 
@@ -39,22 +36,21 @@
     h1.text-center {
       margin-bottom: 30px;
       color: white; /* Arka plan koyuysa başlık beyaz */
-      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
+      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7); /* Yazıya gölge efekti verir */ 
     }
 
     /* İçerik kutusunun arka planı */
     .content-container {
       max-width: 700px;
-      margin: 0 auto;
+      margin: 0 auto; /*Margin = dış boşluk*/
       background: rgba(255, 255, 255, 0.85);
-      padding: 20px;
-      border-radius: 8px;
+      padding: 20px; /* Padding = iç boşluk*/
+      border-radius: 8px; /* Kutunun tüm köşelerini 8 piksel yarıçapıyla yuvarlatır */ 
     }
-    /* Yeni arka plan rengi sınıfı */
+    /* Yeni arka plan rengi için css sınıfı */
 .background-changed {
-  background-color: #a9b5c7; /* Değiştirilecek arka plan rengi */
+  background-color: #a9b5c7; /* Değiştirilecek arka plan rengi */ 
 }
-
   </style>
 </head>
 
@@ -132,7 +128,7 @@
     </section>
 
     <section id="topkapı">
-      <h2>Topkapı Sarı</h2>
+      <h2>Topkapı Sarayı</h2>
       <p>Topkapı Sarayı, İstanbul’da yer alan ve Osmanlı padişahlarına yaklaşık 400 yıl boyunca ev sahipliği yapmış tarihi bir yapıdır.
          1478 yılında Fatih Sultan Mehmet tarafından yaptırılmıştır. Hem padişahların yaşadığı yer hem de devletin yönetildiği merkez olmuştur. 
          İçinde harem, kutsal emanetler, padişah kıyafetleri ve değerli eşyalar sergilenmektedir.
@@ -148,31 +144,37 @@
     </section>
   </div>
 
-  <!-- Bootstrap JS Bundle -->
+  <!-- Bootstrap JS Bundle.  Bootstrap'in JavaScript özelliklerini (örneğin slider, açılır menü, modal, tooltip gibi etkileşimli bileşenleri)
+  çalıştırmak için gereken JavaScript kodlarını sayfaya dahil eder. -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
-  document.querySelectorAll('#slider a').forEach(link => {
-  link.addEventListener('click', e => {
-    e.preventDefault();
+  document.querySelectorAll('#slider a').forEach(link => { /* #slider içindeki tüm <a> etiketlerine (bağlantılara) tıklanıldığında 
+  e.preventDefault(); linkin normalde başka sayfaya gitmesini engeller.
+  Böylece JavaScript ile slider geçişi gibi özel bir işlem yapabilirsin */
+  link.addEventListener('click', e => { //.addEventListener('click', ...) click olayını dinler. Yani kullanıcı linke tıkladığında bu olay tetiklenir.
+  //e => { ... } → Bu bir arrow function. İçine, tıklanınca ne yapılması gerektiğini yazarsın.
 
-    // Önce tüm içerik kutularından sınıfı kaldır
-    document.querySelectorAll('.content-container section').forEach(section => {
-      section.classList.remove('background-changed');
+    e.preventDefault(); //e.preventDefault() → sayfanın yönlenmesini engeller
+
+    // Önce tüm içerik kutularından sınıfı kaldır yani arka planın diğer netne geçişşi için kullanılır 
+    document.querySelectorAll('.content-container section').forEach(section => { // Sayfadaki .content-container sınıfına sahip öğenin içindeki tüm <section> etiketlerini seçer.
+      section.classList.remove('background-changed'); // Her bir <section>'dan background-changed sınıfını kaldırır (eğer varsa)
     });
 
     // Tıklanan resme karşılık gelen <section> içinde arka plan rengi uygula
-    const targetId = link.getAttribute('href').substring(1);
-    const targetElem = document.getElementById(targetId);
-    if (targetElem) {
+    const targetId = link.getAttribute('href').substring(1); //link.getAttribute('href'):Tıklanan linkin href değerini alır.substring(1): # karakterini atar kalan kısmı alır.
+    const targetElem = document.getElementById(targetId); //Bu  id'ye sahip bir elementi sayfada bulur (örneğin: <section id="hakkinda">
+    if (targetElem) { // "targetId" ile eşleşen bir HTML elementi sayfada var mı
       targetElem.classList.add('background-changed');
-      targetElem.scrollIntoView({ behavior: 'smooth' });
+      targetElem.scrollIntoView({ behavior: 'smooth' }); //Tıklanan resme ait metne yumuşakça gitmek için
     }
   });
 });
-
-
   </script>
+  <footer class="text-center p-3 mt-5"> <!-- padding(iç boşluk) 3(boostrapin 0-5 arası ölçel değeri) margin(dış boşluk) 5(max margin değeri)-->
+  <small>&copy; 2025 İrem'in Kişisel Sitesi</small>
+</footer>
 
 </body>
 
