--- a/webOdev.html
+++ b/webOdev.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <link rel="stylesheet" href="style.css"> <!-- stil dosyası için -->
+  <link rel="stylesheet" href="style.css"> <!-- stil dosyası(css) için -->
   <meta charset="UTF-8">
   <title>Hakkımda</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
@@ -14,7 +14,7 @@
       background-image: url('img/ap.png');
       background-size: cover;
       background-position: center;
-      background-attachment: fixed;     /* kullanıcı sayfayı aşağı/yukarı kaydırdığında, arka plan  sabit kalır (css youm satırı)*/
+      background-attachment: fixed;  /* kullanıcı sayfayı aşağı/yukarı kaydırdığında, arka plan  sabit kalır (css youm satırı)*/
     }
     .kutu {
       background-color: rgba(255, 255, 255, 0.85);
@@ -45,21 +45,24 @@
 
 
 
-  <div class="container kutu mb-4"> <!-- container içeriği yatayda ortalar, kuru yukarda belirtilen özellikler içindir.Margin(boşluk) Top 4: üstten büyükçe boşluk verir  -->
+  <div class="container kutu mb-4"> <!-- container içeriği yatayda ortalar, kuru yukarda belirtilen özellikler içindir.Margin(boşluk) Top 4: üstten büyükçe boşluk verir -->
     <h2>Hakkımda</h2>
     <h4>Merhaba, ben İrem!</h4>
     <p>Bilgisayar mühendisliği öğrencisiyim. Hobilerim arasında Müzik dinlemek, fotoğrafçılık ve kod yazmak yer alıyor.</p>
     <p>Katıldığım etkinlikler ve sevdiğim sporların bazıları:</p>
     <ul>
-      <li>Müzik dinlemek</li>
+      <li>Block chain konferansı</li>
       <li>Resim Kulübü</li>
+      <li>Müzik dinlemek</li>
+      <li>Fotoğraf çekmek</li>
     </ul>
     <p> Müzikten bahsetmişken sevdiğim bazı şarkıları sizin için aşağıya bıraktım</p>
     <div class="row">
       <div class="col-md-4">
-        <img src="img/muzi.png" class="img-fluid rounded" alt="Müzik" width="150" height="80"> <!-- img-fluid: Bootstrap sınıfı → Responsive hale getirir(Ekrana göre boyutlanır), rounded köşeler için-->
+        <img src="img/muzi.png" class="img-fluid rounded" alt="Müzik" width="150" height="80"> <!-- img-fluid: Bootstrap sınıfı → Responsive hale getirir(Ekrana göre boyutlanır)
+        rounded köşeler için-->
       </div>
-      <div class="col-md-4" style="text-align: center;">
+      <div class="col-md-4">
         <img src="img/fotograf.jpg" class="img-fluid rounded" alt="Fotoğraf" width="400" height="250" >
       </div>
       <div class="col-md-4" style="text-align: right;" >
@@ -67,7 +70,7 @@
       </div>
     </div>
   </div>
-<footer class="text-center p-3 mt-5"> <!--  padding(iç boşluk) 3(boostrapin 0-5 arası ölçel değeri) margin(dış boşluk) 5(max margin değeri)-->
+<footer class="text-center p-3 mt-5"> <!-- padding(iç boşluk) 3(boostrapin 0-5 arası ölçel değeri) margin(dış boşluk) 5(max margin değeri)-->
   <small>&copy; 2025 İrem'in Kişisel Sitesi</small>
 </footer>
 
