--- a/ilgialanlarim.html
+++ b/ilgialanlarim.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" href="style.css"> <!-- stil dosyası için -->
   <meta charset="UTF-8">
-  <title>Hakkımda</title>
+  <title>İlgi Alanlarım</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <style>
     html, body {
@@ -22,7 +22,10 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light"> <!-- navigasyon barı (üst menü çubuğu) tanımlar (html yorum satırı) --> 
     <div class="container">
       <span class="navbar-brand">Benim Sitem</span>
-      <div class="collapse navbar-collapse">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="webOdev.html">Hakkımda</a></li>
           <li class="nav-item"><a class="nav-link" href="cv.html">Özgeçmiş</a></li>
@@ -85,12 +88,13 @@
 </script>
 <div class="container mt-4"> <!--Ustten bosluk bırakmak içindir-->
   <p class="text-center text-muted"> <!--text-muted → Yazı rengini gri yapar -->
-    Bu sayfada <a href="https://www.themoviedb.org/"> API Servisi</a> kullanılmıştır.
+    Bu sayfada <a href="https://www.themoviedb.org/">TMDB API Servisi</a> kullanılmıştır.
   </p>
   <div class="row" id="movie-list"></div> <<!--Film kartlarının ekleneceği yer. class="row" → Bootstrap'ın kolon düzeni içinde kartların satır halinde sıralanmasını sağlar.
 id="movie-list" → JavaScript’in document.getElementById("movie-list") ile bulup içine film kartlarını ekleyeceği yerdir -->
 </div>
 
-
+ <!-- Bootstrap JS Hamburger menu -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
