--- a/main.html
+++ b/main.html
@@ -22,7 +22,10 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light"> <!-- navigasyon barı (üst menü çubuğu) tanımlar (html yorum satırı) --> 
     <div class="container">
       <span class="navbar-brand">Benim Sitem</span>
-      <div class="collapse navbar-collapse">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="webOdev.html">Hakkımda</a></li>
           <li class="nav-item"><a class="nav-link" href="cv.html">Özgeçmiş</a></li>
@@ -36,14 +39,15 @@
     </div>
   </nav>
 
-  <h1 style="color: aliceblue;">İrem'in Web Sitesine</h1>
   <h5 style="color: aliceblue;">Üst menüden sayfalara geçiş yapabilirsiniz.</h5>
   <h1>    _     </h1>
   <h1>    _     </h1>
+  <h1 style="color: aliceblue;">İrem'in Web Sitesine</h1>
   <div style="text-align: center;" >
     <h1 style="color: aliceblue;">HOŞGELDİNİZ</h1>
   </div>
 
-
+<!-- Bootstrap JS Hamburger menu -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
