--- a/sehrim.html
+++ b/sehrim.html
@@ -58,8 +58,12 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light"> <!-- navigasyon barı (üst menü çubuğu) tanımlar (html yorum satırı) --> 
     <div class="container">
-      <span class="navbar-brand">Benim Sitem</span>
-      <div class="collapse navbar-collapse">
+     <span class="navbar-brand">Benim Sitem</span>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"> <!-- Hamburger menu icindir. -->
+      <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="webOdev.html">Hakkımda</a></li>
           <li class="nav-item"><a class="nav-link" href="cv.html">Özgeçmiş</a></li>
@@ -176,6 +180,8 @@
   <small>&copy; 2025 İrem'in Kişisel Sitesi</small>
 </footer>
 
+ <!-- Bootstrap JS Hamburger menu -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
