--- a/sonuc.html
+++ b/sonuc.html
@@ -73,8 +73,9 @@ Eğer params.get(...) değeri yoksa, boş string "" koyar (hata olmasın diye) *
   }
 }).mount("#app"); /*  <div id="app"> içindeki {{ form.ad }} gibi şeyler Vue tarafından kontrol edilir.
 Vue’yu HTML’deki #app bölümüne bağlar */
-
 </script>
 
+<!-- Bootstrap JS Hamburger menu -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
