--- a/webOdev.html
+++ b/webOdev.html
@@ -28,7 +28,10 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light"> <!-- navigasyon barı (üst menü çubuğu) tanımlar (html yorum satırı) --> 
     <div class="container">
       <span class="navbar-brand">Benim Sitem</span>
-      <div class="collapse navbar-collapse">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"> <!-- Hamburger menu icindir. -->
+      <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="webOdev.html">Hakkımda</a></li>
           <li class="nav-item"><a class="nav-link" href="cv.html">Özgeçmiş</a></li>
@@ -53,8 +56,8 @@
     <ul>
       <li>Block chain konferansı</li>
       <li>Resim Kulübü</li>
-      <li>Müzik dinlemek</li>
       <li>Fotoğraf çekmek</li>
+      <li>Müzik dinlemek</li>
     </ul>
     <p> Müzikten bahsetmişken sevdiğim bazı şarkıları sizin için aşağıya bıraktım</p>
     <div class="row">
@@ -74,5 +77,7 @@
   <small>&copy; 2025 İrem'in Kişisel Sitesi</small>
 </footer>
 
+<!-- Bootstrap JS Hamburger menu -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
